--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.6",
     "expo-linking": "~6.2.2",
     "expo-status-bar": "~1.11.1",
@@ -20,7 +21,9 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
